# imagec

./:  .dockerignore  .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .gitmodules  .releaserc.js  CHANGELOG  CMake Error: Could not create named gene.md  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  TODO  a  build.ps1  build.sh  build_duckdb.ps1  build_libs_unix.sh  build_linux.sh  build_local.ps1  build_macos.sh  build_unix.sh  build_win.ps1  build_win_local.ps1  clean.sh  conanfile.py  copy_deps.cmake  copy_deps.sh  create_sbom.sh  cuda-keyring_1.1-1_all.deb  deploy.sh  deps.json  execute_test.sh  filename  filename.out  graph_info.json  imagec.sh  install_conan.sh  (+16 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: cmake-multi-platform.yml  docker-build.yaml  update-cache.yml
build_linux/: CMakeLists.txt  cleanup.sh  deploy.sh
build_windows/: build.bat  copy_dll.bat
conan/: profile_linux  profile_linux_debug  profile_macos  profile_win  profile_win copy  profile_win_mingw
doc/: adaptive_threshold.java  cmake-multi-platform.yml  duck  icon_2.xcf  image.sql  imagej_auto_threshold.java  install_macos  linux_install  old  ome_bigtif.xml  ome_pyramid.xml  ome_test2.xml  ome_zeis.xml  profile_old.json  rdf.md  win_install
docker/: Dockerfile.linux  Dockerfile.windows
docker/linux/: Dockerfile
docker/windows/: Dockerfile
form_builder/: layout.fbp  layout_win.fbp  noname.cpp  noname.h
form_builder/res/: icons8-ai-20.png.h  icons8-all-out-20.png.h  icons8-background-remover-20.png.h  icons8-blur-20.png.h  icons8-bursts-20.png.h  icons8-centre-point-20.png.h  icons8-contrast-20.png.h  icons8-cpu-20.png.h  icons8-crop-20.png.h  icons8-electrical-threshold-20.png.h  icons8-info-20.png.h  icons8-lambda-20.png.h  icons8-layers-20.png.h  icons8-octagon-20.png.h  icons8-opened-folder-20.png.h  icons8-plus-math-20.png.h  icons8-preview-20.png.h  icons8-save-20.png.h  icons8-settings-20.png.h  icons8-sphere-20.png.h  icons8-start-20.png.h  imagec.png.h
imagec_gui/: flutter_service_worker.js  index.html  main.dart.js  manifest.json  version.json
imagec_gui/assets/: AssetManifest.json  NOTICES
legacy/: settings.cpp  settings.hpp  settings_example.json  test.cpp
legacy/classify/: detection.cpp  detection.hpp  detection_response.hpp
legacy/controller/: controller.cpp  controller.hpp
legacy/pipelines/: pipeline.cpp  pipeline.hpp  pipeline_factory.hpp  pipeline_manual_test.cpp
legacy/results/: results.cpp  results.hpp
legacy/ui/: dialog_analyze_running.cpp  panel_preview.cpp  panel_preview.hpp
lib/: install_git_lfs.sh
lib/bioformats/: BioFormatsWrapper.java  build.sh
lib/converter/: convert.js  convert.sql
lib/libduckdb-windows-amd64/: duckdb.h  duckdb.hpp  duckdb.lib
lib/libtiff-4.1/: libtiff.dsp  libtiff.dsw  libtiff.sln  libtiff.vcproj  libtiff.vcxproj  makefile  tiffinfo.dsp  tiffinfo.vcproj  tiffinfo.vcxproj
models/: cell_segmentation_brightfield_in_vitro_v1.json
new_libtiff/: a.cpp  b.cpp
old/: dialog_channel_measurment.cpp  dialog_channel_measurment.hpp  results.cpp  results.hpp  results_defines.cpp  results_helper.cpp  results_helper.hpp  results_image_meta.cpp  results_image_meta.hpp
old/heatmap/: export_heatmap.cpp  export_heatmap.hpp
old/r/: exporter_r.cpp  exporter_r.hpp
old/reporting/: reporting_defines.hpp  reporting_details.xlsx.hpp  reporting_details_xlsx.cpp  reporting_generator.cpp  reporting_generator.hpp  reporting_heatmap.cpp  reporting_heatmap.hpp  reporting_job_information.cpp  reporting_job_information.hpp  reporting_overview_xlsx.cpp  reporting_overview_xlsx.hpp
old/xlsx/: exporter.cpp  exporter.hpp
resources/: get_icons.py  gnuplot_linux_x86  icons.qrc  main.qml  qt.conf  qt_conf.qrc  resource.qrc
resources/helptext/: channel_type.json  cross_channel_intensity.json  image_filter_histogram_threshold_filter.json  reporting_statistics.json  rolling_ball.json
resources/launcher/: imagec.sh
resources/other/: open_source_libs.html
sbom/: sbom.cdx.json
schemas/: analze_settings.schema.json  pipeline.schema.json  pipeline_step.schema.json  project_class_settings.schema.json  project_image_setup.schema.json  project_pipeline_setup.schema.json  project_settings.schema.json  settings_meta_settings.schema.json
schemas/commands/: blur_settings.schema.json  intensity_settings.schema.json  watershed_settings.schema.json
src/: build_info.h.in  main.cpp  main.cpp_old  main_test.cpp  par_for.h  version.h  version.rc  wx.rc
src/algorithms/: algorithm.cpp  algorithm.hpp  algorithm_executor.hpp
src/api/: api.cpp  api.hpp
src/backend/: global_enums.hpp
src/controller/: controller.cpp  controller.hpp  controller_test.cpp
src/duration_count/: duration_count.h
src/helper/: directory_iterator.hpp  helper.hpp  uid_generator.hpp
src/http/: web_server.cpp  web_server.hpp
src/image/: image.cpp  image.hpp
src/image_processing/: channel_processor.hpp  image_processor.hpp
src/image_processor/: image_processor.hpp  image_processor_base.cpp  image_processor_base.hpp  image_processor_factory.cpp  image_processor_factory.hpp
src/image_reader/: image_processor.cpp  image_processor.hpp  image_reader.hpp
templates/: coloc.ictempl  evanalyzer_cell_brightfield.json  evanalyzer_cell_nucleus.json  evanalyzer_ev_channel.ictempl  evanalyzer_ev_channel.json  evanalyzer_ev_detection.ictempl  evanalyzer_ev_in_cell.json  evanalyzer_ev_in_cell_brightfield.ictempl  evanalyzer_ev_in_cell_brightfield.imcjstemplate  evanalyzer_ev_in_cell_brightfield.json  evanalyzer_ev_in_cell_channel.ictempl  evanalyzer_ev_in_cell_channel.imcjstemplate  evanalyzer_ev_in_cell_channel.json  evanalyzer_nuclues_channel.ictempl  evanalyzer_nuclues_channel.imcjstemplate  evanalyzer_nuclues_channel.json
templates_old/: evanalyzer_cell_brightfield.json  evanalyzer_ev_channel.json
test/: common_test.hpp  load_test_data.sh  magic_enum.hpp  pipeline_test.cpp  settings.json
test_nucleus/: config.json
tools/: clean_git.sh  collect_releases.py  get_license.py  releases.txt
(+1630 files in other folders)
